yeni prrojeler klasörü ile düzen sağlandı

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
         <div class="card shadow-lg rounded-4 overflow-hidden p-4 position-relative"
              data-title="Angler Exploit Kit – PCAP Network Forensics Case Study"
              data-tags="forensics,malware">
-          <a href="Angler-Exploit-Kit.html" class="stretched-link"><span class="visually-hidden">Open Angler Exploit Kit project</span></a>
+          <a href="projects/Angler-Exploit-Kit.html" class="stretched-link"><span class="visually-hidden">Open Angler Exploit Kit project</span></a>
           <h3 class="h5 fw-bold mb-2">Angler Exploit Kit – PCAP Network Forensics Case Study</h3>
           <p class="mb-2">PCAP forensics on a multi-stage Angler EK attack chain using malicious Java payloads.</p>
         </div>
@@ -69,7 +69,7 @@
         <div class="card shadow-lg rounded-4 overflow-hidden p-4 position-relative"
              data-title="Vulnversity – TryHackMe CTF Walkthrough"
              data-tags="ctf,web-exploitation">
-          <a href="vulnversity.html" class="stretched-link"><span class="visually-hidden">Open Vulnversity project</span></a>
+          <a href="projects/vulnversity.html" class="stretched-link"><span class="visually-hidden">Open Vulnversity project</span></a>
           <h3 class="h5 fw-bold mb-2">Vulnversity – TryHackMe CTF Walkthrough</h3>
           <p class="mb-2">This write-up covers my walkthrough of the Vulnversity CTF room on TryHackMe, aimed at building foundational skills in web exploitation</p>
         </div>
