tag renkleri golden angle ile uçlara dağıtıldı

--- a/cv.html
+++ b/cv.html
@@ -199,14 +199,15 @@
     
     <!-- Tag & pill linkage -->
     <script type="module">
-      import { TAGS, colourOf } from './assets/tags.js';
+      import { TAGS, colourOfIndex } from './assets/tags.js';
       const valid = new Set(TAGS.map(t=>t.id));
 
       document.querySelectorAll('.skill-pill').forEach(pill=>{
         const id = pill.dataset.tag.trim().toLowerCase();
         pill.classList.add('badge','tag-pill','me-1');
         if(valid.has(id)){
-          const {text,fill} = colourOf(id);
+          const idx = TAGS.findIndex(t => t.id === id);
+          const { text, fill } = colourOfIndex(idx);
           pill.style.color=text;
           pill.style.background=fill;
           pill.href = `projects.html?tag=${id}`;
