--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
 
 <!-- ========= Tag & Filter Logic ========= -->
 <script type="module">
-  import { TAGS, colourOf } from './assets/tags.js';
+  import { TAGS, colourOfIndex } from './assets/tags.js';
 
   /* Build filter buttons */
   const bar = document.getElementById('tagFilters');
@@ -130,7 +130,8 @@
     holder.className = 'tag-badges mt-2';
     card.dataset.tags.split(',').forEach(raw => {
       const id = raw.trim();
-      const col = colourOf(id);
+      const idx = TAGS.findIndex(t => t.id === id);
+      const col = colourOfIndex(idx);
       const span = document.createElement('span');
       span.className = 'badge tag-pill me-1';
       span.style.color = col.text;
