wonderland project initial upload

--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,16 @@
         </div>
       </div>
 
+      <div class="col-12">
+        <div class="card shadow-lg rounded-4 overflow-hidden p-4 position-relative"
+             data-title="Vulnversity – TryHackMe CTF Walkthrough"
+             data-tags="ctf,priv-escalation">
+          <a href="projects/vulnversity.html" class="stretched-link"><span class="visually-hidden">Open Vulnversity project</span></a>
+          <h3 class="h5 fw-bold mb-2">Wonderland – TryHackMe CTF Walkthrough</h3>
+          <p class="mb-2">This write-up covers my walkthrough of the Wonderland CTF room on TryHackMe, aimed at building foundational skills in cyber security </p>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
