--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
              data-tags="ctf,web-exploitation">
           <a href="projects/vulnversity.html" class="stretched-link"><span class="visually-hidden">Open Vulnversity project</span></a>
           <h3 class="h5 fw-bold mb-2">Vulnversity – TryHackMe CTF Walkthrough</h3>
-          <p class="mb-2">This write-up covers my walkthrough of the Vulnversity CTF room on TryHackMe, aimed at building foundational skills in web exploitation</p>
+          <p class="mb-2">This write-up covers my walkthrough of the Vulnversity CTF room on TryHackMe, aimed at building foundational skills in web exploitation.</p>
         </div>
       </div>
 
@@ -79,9 +79,9 @@
         <div class="card shadow-lg rounded-4 overflow-hidden p-4 position-relative"
              data-title="Vulnversity – TryHackMe CTF Walkthrough"
              data-tags="ctf,priv-escalation">
-          <a href="projects/vulnversity.html" class="stretched-link"><span class="visually-hidden">Open Vulnversity project</span></a>
+          <a href="projects/wonderland.html" class="stretched-link"><span class="visually-hidden">Open Vulnversity project</span></a>
           <h3 class="h5 fw-bold mb-2">Wonderland – TryHackMe CTF Walkthrough</h3>
-          <p class="mb-2">This write-up covers my walkthrough of the Wonderland CTF room on TryHackMe, aimed at building foundational skills in cyber security </p>
+          <p class="mb-2">This write-up covers my walkthrough of the Wonderland CTF room on TryHackMe, aimed at building foundational skills in privilege escalation. </p>
         </div>
       </div>
 
