--- a/projects/wonderland.html
+++ b/projects/wonderland.html
@@ -47,8 +47,8 @@
       <!-- 2. Dirb -->
       <section id="gobuster" class="space-y-4">
         <h3 class="text-2xl font-semibold">2️⃣ Gobuster – Web Content Discovery</h3>
-        <img src="../assets/images/wonderland_dirb_1" alt="Dirb results" class="rounded shadow w-full" />
-        <img src="../assets/images/wonderland_dirb_2" alt="Dirb results" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_dirb_1.png" alt="Dirb results" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_dirb_2.png" alt="Dirb results" class="rounded shadow w-full" />
         <p class="text-gray-700">
             Once we identified that port 80 was open, we navigated to the website and began a typical web enumeration phase. Using dirb, we brute-forced directory paths and successfully discovered a hidden folder: /r. This directory contained what appeared to be an ordinary image file.
             While our initial progress came from brute-forcing (no stego magic needed), this is also where steganography could have been applied.
@@ -58,7 +58,7 @@
         <!-- Bonus: Steganography Attempt (/img Directory)-->
       <section id="gobuster" class="space-y-4">
         <h3 class="text-2xl font-semibold"> ➕ Bonus: Steganography Attempt (/img Directory)</h3>
-        <img src="../assets/images/wonderland_steogra" alt="Dirb results" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_steogra.png" alt="Dirb results" class="rounded shadow w-full" />
         <p class="text-gray-700">
             Though not essential for solving the room, we explored steganography just in case. We found white_rabbit_1.jpg inside the /img directory and analyzed it using tools like exiftool, strings, steghide, zsteg, and binwalk.
             These efforts helped us practice identifying hidden data inside image files — a valuable skill in many CTFs. While the real password was ultimately guessed and brute-forced via directory enumeration, this optional exploration served as a good example of thinking outside the box when needed.
@@ -92,7 +92,7 @@
       <!-- 5. PrivEsc -->
       <section id="privesc" class="space-y-4">
         <h3 class="text-2xl font-semibold">5️⃣ SSH Rabbit Privilege Escalation</h3>
-        <img src="../assets/images/Wonderland_rabbit_1.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_rabbit_1.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
         <p class="text-gray-700">
             After becoming the user rabbit, we took a look around and immediately spotted something odd in their home directory—a suspiciously named binary: teaParty. The name alone sounded like it held secrets, and the file permissions confirmed it: the binary had the SUID bit set, meaning it could potentially run with elevated (root) privileges. 👀On execution, it simply said:
 
@@ -100,12 +100,12 @@
             The Mad Hatter will be here soon..."
 
         </p>
-        <img src="../assets/images/Wonderland_rabbit_2.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_rabbit_2.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
         <p class="text-gray-700 mt-4">Wait, what? Hatter? Sounds like some sort of callback to earlier users. 🤔 That gave us a hunch: maybe the binary calls external programs—and if so, we could hijack one of them.
             To test this, we created a malicious script in /tmp named date (a common Linux command), filled it with a simple #!/bin/bash reverse shell, made it executable, and then manipulated our $PATH to prioritize /tmp.
         </p>
 
-        <img src="../assets/images/Wonderland_rabbit_3.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_rabbit_3.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
         <Then class="text-gray-700 mt-4" > Then we ran ./teaParty again… and boom. 💥 Root shell.
         We weren’t just at the tea party anymore—we were hosting it. 🎉
         From here, it was just a matter of cat /root/root.txt, and the final flag was ours.
@@ -116,17 +116,17 @@
       <!-- 6. PrivEsc -->
       <section id="privesc" class="space-y-4">
         <h3 class="text-2xl font-semibold">6️⃣ SSH Hatter and Flags</h3>
-        <img src="../assets/images/Wonderland_hatter_1.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_hatter_1.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
         <p class="text-gray-700">
             Once inside Hatter’s home directory, we found a single file: password.txt. Opening it revealed another curious phrase: WhyIsARavenLikeAWritingDesk? — likely password for hatter (or just a philosophical crisis). 🐦📝
 
         </p>
-        <img src="../assets/images/Wonderland_hatter_2.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_hatter_2.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
         <p class="text-gray-700 mt-4">We now had access to much more of the system — but not everything. Attempts to list or access the /root directory or alice's root.txt were denied. Still, one flag — user.txt — was readable and gave us:
             thm{Curiouser and curiouser!} 💡
             
         </p>
-        <img src="../assets/images/Wonderland_hatter_3.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
+        <img src="../assets/images/wonderland_hatter_3.png" alt="Privilege escalation screenshot" class="rounded shadow w-full" />
         <Then class="text-gray-700 mt-4" > Just when it seemed like we were stuck as Hatter — no sudo rights, no access to Alice’s or root’s secret flags — we stumbled upon a hidden ace up our sleeve: Perl. 🎭
             Turns out the system allowed us to execute /usr/bin/perl with elevated privileges. Using a simple one-liner that leveraged Perl’s POSIX module, we invoked setuid(0) and launched a root shell. Just like that, we were root. 👑
             
