--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
        // Fetch project cards dynamically from projects.html
         const sliderContainer = document.querySelector('.my-slider');
-        fetch('projects.html')
+        fetch('./projects.html')
           .then(response => response.text())
           .then(html => {
             const parser = new DOMParser();
