--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
       </div>
     </section>
 
+    <!-- Projects Carousel on Home -->
+    <section id="projects-carousel" class="py-5 bg-gray-50">
+    <div class="container">
+        <h2 class="h3 text-center mb-4">Latest Projects</h2>
+        <div class="my-slider row g-4">
+        <!-- Burası JS ile doldurulacak -->
+        </div>
+      </div>
+    </section>
+
+
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
 
